added a DRS entry for CP4CDS

--- a/esmvaltool/recipes/examples/recipe_python.yml
+++ b/esmvaltool/recipes/examples/recipe_python.yml
@@ -1,7 +1,7 @@
 ---
 
 datasets:
-  - {dataset: bcc-csm1-1,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2002}
+  - {dataset: CanESM2,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2002}
   - {dataset: GFDL-ESM2G,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2002}
   - {dataset: MPI-ESM-LR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2002}
 
@@ -26,7 +26,7 @@ diagnostics:
       ta:
         preprocessor: preprocessor1
         field: T3M
-        reference_dataset: bcc-csm1-1
+        reference_dataset: CanESM2
       pr:
         field: T2Ms
         reference_dataset: MPI-ESM-LR
