Add frequency key for non standard variable

--- a/esmvaltool/recipes/recipe_perfmetrics_CMIP5.yml
+++ b/esmvaltool/recipes/recipe_perfmetrics_CMIP5.yml
@@ -1488,6 +1488,7 @@ diagnostics:
         reference_dataset: CERES-EBAF
         mip: Amon
         field: T2Ms
+        frequency: mon
         derive: true
         force_derivation: false
         project: CMIP5
@@ -1556,6 +1557,7 @@ diagnostics:
         reference_dataset: CERES-EBAF
         mip: Amon
         field: T2Ms
+        frequency: mon
         derive: true
         force_derivation: false
         project: CMIP5
@@ -1784,6 +1786,7 @@ diagnostics:
         alternative_dataset: NIWA
         mip: Amon
         field: T2Ms
+        frequency: mon
         derive: true
         force_derivation: false
         project: CMIP5
