added frequency key to recipes for derived variables

--- a/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_obs.yml
+++ b/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_obs.yml
@@ -62,11 +62,13 @@ diagnostics:
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       lwcre: # TOA LW Cloud Radiative Effect
         preprocessor: pp_rad_derive_var
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       rsns: # Surf SW net all sky
         preprocessor: pp_rad_derive_var
         field: T2Ms
