--- a/esmvaltool/recipes/recipe_lauer13jclim.yml
+++ b/esmvaltool/recipes/recipe_lauer13jclim.yml
@@ -130,6 +130,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: UWisc, project: OBS, type: sat, version: v2,
          start_year: 1988, end_year: 2007, tier: 3}
@@ -186,6 +187,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -202,6 +204,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -275,6 +278,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: UWisc, project: OBS, type: sat, version: v2,
          start_year: 1988, end_year: 2007, tier: 3}
@@ -291,6 +295,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -307,6 +312,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -345,6 +351,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: UWisc, project: OBS, type: sat, version: v2,
          start_year: 1988, end_year: 2007, tier: 3}
@@ -393,6 +400,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -409,6 +417,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
