--- a/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_all.yml
+++ b/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_all.yml
@@ -61,11 +61,13 @@ diagnostics:
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       lwcre: # TOA LW Cloud Radiative Effect
         preprocessor: pp_rad_derive_var
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       rsns: # obs: ceres; name: Surf SW net all sky
         preprocessor: pp_rad_derive_var
         field: T2Ms
