--- a/esmvaltool/recipes/recipe_clouds_ipcc.yml
+++ b/esmvaltool/recipes/recipe_clouds_ipcc.yml
@@ -134,6 +134,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -153,6 +154,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
@@ -169,6 +171,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
         derive: true
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF, project: obs4mips, level: L3B, version: Ed2-7,
          start_year: 2001, end_year: 2010, tier: 1}
