added more frequency keys to recipes for derived variables

--- a/esmvaltool/recipes/recipe_validation.yml
+++ b/esmvaltool/recipes/recipe_validation.yml
@@ -37,6 +37,7 @@ diagnostics:
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       rsut: # TOA SW up all sky
         preprocessor: pp_rad
         field: T2Ms
