--- a/esmvaltool/recipes/recipe_autoassess_landsurface_surfrad.yml
+++ b/esmvaltool/recipes/recipe_autoassess_landsurface_surfrad.yml
@@ -38,11 +38,13 @@ diagnostics:
         derive: true
         force_derivation: false
         fx_files: [sftlf]
+        frequency: mon
       rlns: # Surf LW net all sky
         field: T2Ms
         derive: true
         force_derivation: false
         fx_files: [sftlf]
+        frequency: mon
     additional_datasets:
       - {dataset: CERES-EBAF,  project: obs4mips,  level: L3B,  version: Ed2-7,  start_year: 2001,  end_year: 2012, tier: 1}
     scripts:
