--- a/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_obs.yml
+++ b/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_obs.yml
@@ -52,11 +52,13 @@ diagnostics:
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       rsnt: # TOA SW net
         preprocessor: pp_rad_derive_var
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       swcre: # TOA SW Cloud Radiative Effect
         preprocessor: pp_rad_derive_var
         field: T2Ms
@@ -74,11 +76,13 @@ diagnostics:
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       rlns: # Surf LW net all sky
         preprocessor: pp_rad_derive_var
         field: T2Ms
         derive: true
         force_derivation: false
+        frequency: mon
       rsut: # TOA SW up all sky
         preprocessor: pp_rad
         field: T2Ms
