--- a/esmvaltool/recipes/recipe_autoassess_radiation_rms_cfMon_all.yml
+++ b/esmvaltool/recipes/recipe_autoassess_radiation_rms_cfMon_all.yml
@@ -45,31 +45,37 @@ diagnostics:
         field: T4M
         derive: true
         force_derivation: false
+        frequency: mon
       clltkisccp: # Low-thick Cloud
         preprocessor: pp_rad_derive_var
         field: T4M
         derive: true
         force_derivation: false
+        frequency: mon
       clmmtisccp: # Middle-intermediate Cloud
         preprocessor: pp_rad_derive_var
         field: T4M
         derive: true
         force_derivation: false
+        frequency: mon
       clmtkisccp: # Middle-thick Cloud
         preprocessor: pp_rad_derive_var
         field: T4M
         derive: true
         force_derivation: false
+        frequency: mon
       clhmtisccp: # High-intermediate Cloud
         preprocessor: pp_rad_derive_var
         field: T4M
         derive: true
         force_derivation: false
+        frequency: mon
       clhtkisccp: # High-thick Cloud
         preprocessor: pp_rad_derive_var
         field: T4M
         derive: true
         force_derivation: false
+        frequency: mon
     additional_datasets:
       - {dataset: ISCCP,  project: obs4mips,  level: L3,  version: V1.0,  start_year: 1985,  end_year: 1988, tier: 1}
     scripts:
