--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,7 +233,7 @@ jobs:
             apt-get update > /logs/apt.txt 2>&1
             apt-get install -y build-essential >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda_base.txt 2>&1
-            conda install -y conda-build >> /logs/conda_base.txt 2>&1
+            conda install -y conda-build conda-verify >> /logs/conda_base.txt 2>&1
             # Log versions
             dpkg -l > /logs/versions.txt
             conda env export -n base > /logs/build_environment.yml
@@ -316,6 +316,7 @@ workflows:
       - python3_test
       - python2_test
       - python3_install
+      - conda_build
   nightly:
     triggers:
       - schedule:
