--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,9 @@ dependencies:
   - python-stratify
   - esmpy
   # Multi language support:
-  - gcc
+  - gcc_linux-64
+  - gxx_linux-64
+  - gfortran_linux-64
   - ncl
   - ncurses=6.1=hfc679d8_1
   - r-base
