--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     # Run Python 3 tests
     working_directory: /python3_test
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -20,11 +20,8 @@ jobs:
           # Update/Create Conda Environment
           command: |
             conda update -y conda
-            if ! test -d "/opt/conda/envs/esmvaltool"; then
-              conda create -y --name esmvaltool python=3
-            fi
-            conda env update --name esmvaltool
-            source activate esmvaltool
+            conda env update
+            conda activate esmvaltool
             Rscript esmvaltool/install/R/setup.R
       - save_cache:
           key: deps3-{{ .Branch }}-{{ checksum "cache_key.txt" }}
@@ -33,7 +30,7 @@ jobs:
       - run:
           # Activate Conda environment and run tests
           command: |
-            source activate esmvaltool
+            conda activate esmvaltool
             python setup.py test
       - store_test_results:
           path: test-reports/
@@ -51,7 +48,7 @@ jobs:
     # Run Python 2 tests
     working_directory: /python2_test
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -69,8 +66,8 @@ jobs:
             if ! test -d "/opt/conda/envs/esmvaltool"; then
               conda create -y --name esmvaltool python=2
             fi
-            conda env update --name esmvaltool
-            source activate esmvaltool
+            conda env update
+            conda activate esmvaltool
             Rscript esmvaltool/install/R/setup.R
       - save_cache:
           key: deps2-{{ .Branch }}-{{ checksum "cache_key.txt" }}
@@ -79,7 +76,7 @@ jobs:
       - run:
           # Activate Conda environment and run tests
           command: |
-            source activate esmvaltool
+            conda activate esmvaltool
             python setup.py test
       - store_test_results:
           path: test-reports/
@@ -90,7 +87,7 @@ jobs:
     # Test Python 3 installation
     working_directory: /python3_install
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -99,12 +96,9 @@ jobs:
             mkdir /logs
             # Install
             conda update -y conda > /logs/conda.txt 2>&1
-            conda create -y --name esmvaltool python=3 > /logs/conda.txt 2>&1
-            conda env update --name esmvaltool >> /logs/conda.txt 2>&1
-            set +x
+            conda env update >> /logs/conda.txt 2>&1
             export CONDA_BUILD=1
-            source activate esmvaltool
-            set -x
+            conda activate esmvaltool
             pip install . > /logs/install.txt 2>&1
             Rscript ./esmvaltool/install/R/setup.R > /logs/R_install.txt 2>&1
             # Log versions
@@ -122,7 +116,7 @@ jobs:
     # Test Python 2 installation
     working_directory: /python2_install
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -132,9 +126,9 @@ jobs:
             # Install
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name esmvaltool python=2 > /logs/conda.txt 2>&1
-            conda env update --name esmvaltool >> /logs/conda.txt 2>&1
+            conda env update >> /logs/conda.txt 2>&1
             set +x
-            source activate esmvaltool
+            conda activate esmvaltool
             set -x
             pip install . > /logs/install.txt 2>&1
             Rscript ./esmvaltool/install/R/setup.R > /logs/R_install.txt 2>&1
@@ -153,7 +147,7 @@ jobs:
     # Test development installation
     working_directory: /develop
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -162,10 +156,9 @@ jobs:
             mkdir /logs
             # Install
             conda update -y conda > /logs/conda.txt 2>&1
-            conda create -y --name esmvaltool python=3 > /logs/conda.txt 2>&1
-            conda env update --name esmvaltool >> /logs/conda.txt 2>&1
+            conda env update >> /logs/conda.txt 2>&1
             set +x
-            source activate esmvaltool
+            conda activate esmvaltool
             set -x
             pip install -e .[develop] > /logs/install.txt 2>&1
             Rscript ./esmvaltool/install/R/setup.R > /logs/R_install.txt 2>&1
@@ -184,7 +177,7 @@ jobs:
     # Test building documentation
     working_directory: /doc
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -193,10 +186,9 @@ jobs:
             mkdir /logs
             # Install
             conda update -y conda > /logs/conda.txt 2>&1
-            conda create -y --name esmvaltool python=3 > /logs/conda.txt 2>&1
-            conda env update --name esmvaltool >> /logs/conda.txt 2>&1
+            conda env update >> /logs/conda.txt 2>&1
             set +x
-            source activate esmvaltool
+            conda activate esmvaltool
             set -x
             pip install -e .[develop] > /logs/install.txt 2>&1
             # Log versions
@@ -212,7 +204,7 @@ jobs:
     # Test conda build
     working_directory: /esmvaltool
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -228,19 +220,19 @@ jobs:
             # Build conda package
             conda build . -c conda-forge -c birdhouse > /logs/build_log.txt
             # Install Python 3 conda package
-            conda create -y --name esmvaltool3 python=3 > /logs/conda_esmvaltool3.txt 2>&1
-            set +x; source activate esmvaltool3; set -x
+            conda create -y --name esmvaltool3 > /logs/conda_esmvaltool3.txt 2>&1
+            set +x; conda activate esmvaltool3; set -x
             conda install -y esmvaltool --use-local -c conda-forge -c birdhouse
             conda env export > /logs/test_environment3.yml
             esmvaltool -h
-            set +x; source deactivate; set -x
+            set +x; conda deactivate; set -x
             # Install Python 2 conda package
             conda create -y --name esmvaltool2 python=2 > /logs/conda_esmvaltool2.txt 2>&1
-            set +x; source activate esmvaltool2; set -x
+            set +x; conda activate esmvaltool2; set -x
             conda install -y esmvaltool --use-local -c conda-forge -c birdhouse
             conda env export > /logs/environment2.yml
             esmvaltool -h
-            set +x; source deactivate; set -x
+            set +x; conda deactivate; set -x
       - store_artifacts:
           path: /logs
 
@@ -248,7 +240,7 @@ jobs:
     # Test conda package installation
     working_directory: /esmvaltool
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - run:
           command: |
@@ -257,8 +249,8 @@ jobs:
             mkdir /logs
             conda update -y conda > /logs/conda.txt 2>&1
             # Create and activate conda environment
-            conda create -y --name esmvaltool python=3
-            set +x; source activate esmvaltool; set -x
+            conda create -y --name esmvaltool
+            set +x; conda activate esmvaltool; set -x
             # Install
             conda install -y esmvaltool -c esmvalgroup -c conda-forge -c birdhouse
             # Log versions
@@ -271,7 +263,7 @@ jobs:
     # Test ncl conda package
     working_directory: /ncl
     docker:
-      - image: continuumio/miniconda
+      - image: continuumio/miniconda3
     steps:
       - checkout
       - run:
@@ -282,7 +274,7 @@ jobs:
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name ncl > /logs/conda.txt 2>&1
             set +x
-            source activate ncl
+            conda activate ncl
             set -x
             conda install -y --channel conda-forge ncl >> /logs/conda.txt 2>&1
             # Log versions
