--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
       - run:
           # Update/Create Conda Environment
           command: |
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1          
             conda update -y conda
             conda env update
             conda activate esmvaltool
@@ -62,6 +63,7 @@ jobs:
       - run:
           # Update/Create Conda Environment
           command: |
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1          
             conda update -y conda
             if ! test -d "/opt/conda/envs/esmvaltool"; then
               conda create -y --name esmvaltool python=2
@@ -95,9 +97,9 @@ jobs:
             set -x
             mkdir /logs
             # Install
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
-            export CONDA_BUILD=1
             conda activate esmvaltool
             pip install . > /logs/install.txt 2>&1
             Rscript ./esmvaltool/install/R/setup.R > /logs/R_install.txt 2>&1
@@ -124,6 +126,7 @@ jobs:
             set -x
             mkdir /logs
             # Install
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1            
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name esmvaltool python=2 > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
@@ -155,6 +158,7 @@ jobs:
             set -x
             mkdir /logs
             # Install
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1            
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x
@@ -185,6 +189,7 @@ jobs:
             set -x
             mkdir /logs
             # Install
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1            
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x
@@ -212,6 +217,7 @@ jobs:
             set -x
             # Install prerequisites
             mkdir /logs
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1            
             conda update -y conda > /logs/conda_base.txt 2>&1
             conda install -y conda-build conda-verify >> /logs/conda_base.txt 2>&1
             # Log versions
@@ -247,6 +253,7 @@ jobs:
             set -x
             # Install prerequisites
             mkdir /logs
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1            
             conda update -y conda > /logs/conda.txt 2>&1
             # Create and activate conda environment
             conda create -y --name esmvaltool
@@ -271,6 +278,7 @@ jobs:
             set -x
             mkdir /logs
             # Install
+            apt update && apt -y install build-essential gfortran > /logs/apt.txt 2>&1            
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name ncl > /logs/conda.txt 2>&1
             set +x
